--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "laravel/framework": "5.0.*"
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
