--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "php": ">=5.4.0"
     },
     "autoload": {
+        "files": [
+            "src/YitOS/Foundation/helpers.php"
+        ],
         "psr-4": {
             "YitOS\\": "src/YitOS/"
         }
